[tool.poetry]
name = "narcotics-tracker"
version = "0.2.5"
description = "A command-line utility for tracking controlled substances for EMS agencies."
authors = ["ScottSucksAtProgramming <scottkostolni+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.0"
astroid = "^3.0.2"
attrs = "^23.2.0"
black = "^23.12.1"
click = "^8.1.7"
commonmark = "^0.9.1"
dill = "^0.3.7"
exceptiongroup = "^1.2.0"
iniconfig = "^2.0.0"
isort = "^5.13.2"
lazy-object-proxy = "^1.10.0"
mccabe = "^0.7.0"
mypy-extensions = "^1.0.0"
packaging = "^23.2"
pathspec = "^0.12.1"
pendulum = "^3.0.0"
platformdirs = "^4.1.0"
pluggy = "^1.3.0"
py = "^1.11.0"
pycodestyle = "^2.11.1"
pygments = "^2.17.2"
pylint = "^3.0.3"
pyparsing = "^3.1.1"
pytest = "^7.4.4"
shellingham = "^1.5.4"
six = "^1.16.0"
time-machine = "^2.13.0"
toml = "^0.10.2"
tomli = "^2.0.1"
tomlkit = "^0.12.3"
typer = "^0.9.0"
typing-extensions = "^4.9.0"
wrapt = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
